# Tauri-next-nest-app

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: auto-merge-and-updated  release.yml  tauri-release.yml
api/app/: drizzle.config.ts  package.json  pnpm-lock.yaml
api/app/data/: app.db
api/app/drizzle/migrations/: 0000_smooth_patriot.sql  0001_common_black_crow.sql  0002_bumpy_the_hand.sql  0003_aberrant_excalibur.sql  0005_dark_warpath.sql  0005_nosy_stark_industries.sql  0006_broad_yellow_claw.sql
api/app/src/: app.controller.ts  app.module.ts  app.service.ts  debug-drizzle-register-fail.ts  debug-drizzle-register.ts  debug-drizzle.js  debug-migration.ts  main.ts
api/app/src/db/: database.module.ts  database.provider.ts  drizzle.module.ts  index.ts
api/app/src/users/: users.service.ts
tauri-app/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
tauri-app/src/: App.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs  main.rs
tauri-app/src/lib/: db.ts
tauri-app/src/migrations/: 001_initial.ts  002_add_phone_number.ts  index.ts  types.ts
web/: drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml
web/drizzle/migrations/: 0000_melted_tomorrow_man.sql
web/drizzle/migrations/meta/: 0000_snapshot.json  _journal.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/db/: index.ts  schema.ts
web/src/lib/: api.ts  tauri.ts
web/src/providers/: QueryProvider.tsx
web/src/ui/components/: Button.tsx  (+2 more)
(+16 files in other folders)
